--- a/mujahid.css
+++ b/mujahid.css
@@ -1,10 +1,10 @@
-﻿@import url('https://fonts.googleapis.com/css?family=Berkshire+Swash');
+@import url('https://fonts.googleapis.com/css?family=Berkshire+Swash');
 
 @import url('https://fonts.googleapis.com/css?family=Nova+Oval');
 
 html {
     
-    background: url(tatti.jpg) no-repeat center center fixed; 
+    background: url(https://wallpaperscraft.com/image/starry_sky_man_light_glitter_118118_1280x1024.jpg) no-repeat center center fixed; 
     
     -webkit-background-size: cover;
     
@@ -38,7 +38,21 @@ body {
 
 
     
- 
+   #footer {
+    
+    margin:0;
+    
+    padding:5px;
+    
+    text-align:center;
+    
+    font-family: 'Nova Oval', cursive;
+    
+    font-size: 25px;
+    
+    text-shadow: 0 0 11px #ff0000, 0 0 11px #ff0000, 0 0 11px #ff0000;
+    
+    color: white; 
 }
 #center {
     
